# cheadergen

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  dprint.json  justfile  profile.json  rust-toolchain.toml
.claude/: settings.json
.config/: nextest.toml
.github/workflows/: verify.yml
cheadergen/: Cargo.toml
cheadergen/src/: main.rs
design/: processing_pipeline.md  reflection_engine.md
src/: main.rs
tests/: setup-metadata.sh  tests.rs
ui-tests/: Cargo.toml  build.rs  default_18405966977465479819_0_37707.profraw  default_18405966977465479819_0_37708.profraw  default_4561926821265967752_0_38864.profraw  default_4561926821265967752_0_38865.profraw  default_4561926821265967752_0_38870.profraw  default_4561926821265967752_0_38871.profraw  default_4561926821265967752_0_38872.profraw  default_4561926821265967752_0_38873.profraw  default_4561926821265967752_0_38874.profraw  default_4561926821265967752_0_38875.profraw  default_4561926821265967752_0_38884.profraw  default_4561926821265967752_0_38885.profraw  default_4561926821265967752_0_38886.profraw  default_4561926821265967752_0_38887.profraw  default_4561926821265967752_0_38888.profraw  default_4561926821265967752_0_38889.profraw  default_4561926821265967752_0_38890.profraw  default_4561926821265967752_0_38891.profraw  default_4561926821265967752_0_38899.profraw  default_4561926821265967752_0_38901.profraw  default_4561926821265967752_0_38902.profraw  default_4561926821265967752_0_38903.profraw  default_4561926821265967752_0_38904.profraw  default_4561926821265967752_0_38905.profraw  (+1404 more)
(+1663 files in other folders)
