[workspace]
members = ["cheadergen", "ui-tests"]
resolver = "3"

[workspace.dependencies]
rustdoc_types = { git = "https://github.com/LukeMathWalker/pavex", package = "rustdoc_types" }
rustdoc_ext = { git = "https://github.com/LukeMathWalker/pavex" }
rustdoc_processor = { git = "https://github.com/LukeMathWalker/pavex" }
guppy = "0.17"
