[package]
name = "cheadergen"
version = "0.1.0"
edition = "2024"
description = "A tool for generating C bindings to Rust code."
license = "Apache-2.0"
keywords = ["bindings", "ffi", "code-generation"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
repository = "https://github.com/LukeMathWalker/cheadergen"

[dependencies]
anyhow = "1"
camino = "1"
clap = { version = "4", features = ["derive"] }
fs-err = "3"
guppy = { workspace = true }
rustdoc_ext = { workspace = true }
rustdoc_processor = { workspace = true }
rustdoc_types = { workspace = true }
